# Yuuki

./: CMakeLists.txt  MAKEFILE  README.md
.github/workflows/: release.yml
include/: attack.h  bench.h  board.h  draw.h  eval.h  globals.h  move.h  perft.h  pstables.h  search.h  see.h  tt.h  types.h  uci.h  utils.h
settings preset/: 1-novice.ini  2-Beginner.ini  6-advanced.ini  7-expert.ini  A1-aggressive.ini  A2-hyperaggressive.ini  D2-solid.ini  D4-soliddefender.ini  P2-endgamespecialist.ini
src/: attack.cpp  bench.cpp  board.cpp  draw.cpp  eval.cpp  globals.cpp  main.cpp  move.cpp  perft.cpp  search.cpp  see.cpp  tt.cpp  uci.cpp  utils.cpp
